--- a/alexandria/app/build.gradle
+++ b/alexandria/app/build.gradle
@@ -38,5 +38,6 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':zBarScannerLibrary')
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
