--- a/Football_Scores-master/app/src/main/AndroidManifest.xml
+++ b/Football_Scores-master/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
                 android:value="barqsoft.footballscores.MainActivity" />
         </activity>
 
-        <service android:name=".service.myFetchService" />
+        <service android:name=".service.MyFetchService" />
 
         <receiver android:name=".FootballScoresWidget" >
             <intent-filter>
