--- a/alexandria/app/build.gradle
+++ b/alexandria/app/build.gradle
@@ -22,11 +22,11 @@ android {
     }
     buildTypes {
         release {
-            testCoverageEnabled = true
+            //testCoverageEnabled = true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug{
-            testCoverageEnabled = true
+            //testCoverageEnabled = true
         }
 
     }
